// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/SkillRow career 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c2 > div {
  margin: 0 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  position: relative;
  overflow: visible;
  height: 20px;
  width: 30px;
  background-color: rgb(234,242,246);
  border: solid rgb(30,30,28);
  border-width: 1px 0;
}

.c3:first-child {
  border-left-width: 1px;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c3:last-child {
  border-right-width: 1px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c3:not(:last-child)::after {
  content: '';
  height: 13px;
  width: 13px;
  border: solid rgb(30,30,28);
  border-width: 0 1px 1px 0;
  background-color: rgb(234,242,246);
  left: 72%;
  top: 2px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  z-index: 899;
  position: absolute;
}

.c0 {
  width: 100%;
  display: grid;
  grid-template-columns: 4fr 1fr 5fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  padding: 8px;
  grid-gap: 6px;
  page-break-inside: avoid;
}

.c0 > h5 {
  margin: 0;
  color: rgb(0,130,155);
  width: 100%;
  text-shadow: 1px 1px rgb(234,242,246);
}

.c1 {
  position: relative;
  cursor: default;
  font-size: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid;
  padding: 4px;
  padding-top: 6px;
  border-radius: 3px;
  font-weight: 700;
  color: rgb(234,242,246);
  background-color: rgb(0,130,155);
  border-color: rgb(0,130,155);
}

.c1 > input {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
}

<div
  class="c0"
  data-testid="skill-athletics"
>
  <h5>
    Athletics (BR)
  </h5>
  <label
    class="c1"
    data-testid="skill-career-athletics"
    name="skill.athletics.career"
  >
    <input
      disabled=""
      name="skill.athletics.career"
      type="checkbox"
    />
    <span>
      CAREER
    </span>
  </label>
  <div
    class="c2"
    data-testid="skill-rank-athletics"
  >
    <div>
      <div
        class="c3"
        data-testid="athletics-1"
      />
      <div
        class="c3"
        data-testid="athletics-2"
      />
      <div
        class="c3"
        data-testid="athletics-3"
      />
      <div
        class="c3"
        data-testid="athletics-4"
      />
      <div
        class="c3"
        data-testid="athletics-5"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/SkillRow editing 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c2 > div {
  margin: 0 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c4 {
  position: relative;
  overflow: visible;
  height: 20px;
  width: 30px;
  background-color: rgb(0,130,155);
  border: solid rgb(30,30,28);
  border-width: 1px 0;
}

.c4:first-child {
  border-left-width: 1px;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c4:last-child {
  border-right-width: 1px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c4:not(:last-child)::after {
  content: '';
  height: 13px;
  width: 13px;
  border: solid rgb(30,30,28);
  border-width: 0 1px 1px 0;
  background-color: rgb(0,130,155);
  left: 72%;
  top: 2px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  z-index: 899;
  position: absolute;
}

.c5 {
  position: relative;
  overflow: visible;
  height: 20px;
  width: 30px;
  background-color: rgb(234,242,246);
  border: solid rgb(30,30,28);
  border-width: 1px 0;
}

.c5:first-child {
  border-left-width: 1px;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c5:last-child {
  border-right-width: 1px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c5:not(:last-child)::after {
  content: '';
  height: 13px;
  width: 13px;
  border: solid rgb(30,30,28);
  border-width: 0 1px 1px 0;
  background-color: rgb(234,242,246);
  left: 72%;
  top: 2px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  z-index: 899;
  position: absolute;
}

.c3 {
  background: transparent;
  border: none;
  color: rgb(242,143,34);
  font-size: 15px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
}

.c3:disabled {
  color: rgb(255,244,233);
  cursor: not-allowed;
}

.c0 {
  width: 100%;
  display: grid;
  grid-template-columns: 4fr 1fr 5fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  padding: 8px;
  grid-gap: 6px;
  page-break-inside: avoid;
}

.c0 > h5 {
  margin: 0;
  color: rgb(0,130,155);
  width: 100%;
  text-shadow: 1px 1px rgb(234,242,246);
}

.c1 {
  position: relative;
  cursor: default;
  font-size: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid;
  padding: 4px;
  padding-top: 6px;
  border-radius: 3px;
  font-weight: 700;
  color: rgba(30,30,28,0.4);
  border-color: rgba(30,30,28,0.4);
}

.c1 > input {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
}

<div
  class="c0"
  data-testid="skill-brawl"
>
  <h5>
    Brawl (BR)
  </h5>
  <label
    class="c1"
    data-testid="skill-career-brawl"
    name="skill.brawl.career"
  >
    <input
      disabled=""
      name="skill.brawl.career"
      type="checkbox"
    />
    <span>
      CAREER
    </span>
  </label>
  <div
    class="c2"
    data-testid="skill-rank-brawl"
  >
    <button
      class="c3"
      data-testid="decrease-brawl-rank"
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 13H5v-2h14v2z"
        />
      </svg>
    </button>
    <div>
      <div
        class="c4"
        data-testid="brawl-1"
      />
      <div
        class="c5"
        data-testid="brawl-2"
      />
      <div
        class="c5"
        data-testid="brawl-3"
      />
      <div
        class="c5"
        data-testid="brawl-4"
      />
      <div
        class="c5"
        data-testid="brawl-5"
      />
    </div>
    <button
      class="c3"
      data-testid="increase-brawl-rank"
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/SkillRow rank 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c2 > div {
  margin: 0 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c3 {
  position: relative;
  overflow: visible;
  height: 20px;
  width: 30px;
  background-color: rgb(0,130,155);
  border: solid rgb(30,30,28);
  border-width: 1px 0;
}

.c3:first-child {
  border-left-width: 1px;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c3:last-child {
  border-right-width: 1px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c3:not(:last-child)::after {
  content: '';
  height: 13px;
  width: 13px;
  border: solid rgb(30,30,28);
  border-width: 0 1px 1px 0;
  background-color: rgb(0,130,155);
  left: 72%;
  top: 2px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  z-index: 899;
  position: absolute;
}

.c4 {
  position: relative;
  overflow: visible;
  height: 20px;
  width: 30px;
  background-color: rgb(234,242,246);
  border: solid rgb(30,30,28);
  border-width: 1px 0;
}

.c4:first-child {
  border-left-width: 1px;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c4:last-child {
  border-right-width: 1px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c4:not(:last-child)::after {
  content: '';
  height: 13px;
  width: 13px;
  border: solid rgb(30,30,28);
  border-width: 0 1px 1px 0;
  background-color: rgb(234,242,246);
  left: 72%;
  top: 2px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  z-index: 899;
  position: absolute;
}

.c0 {
  width: 100%;
  display: grid;
  grid-template-columns: 4fr 1fr 5fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  padding: 8px;
  grid-gap: 6px;
  page-break-inside: avoid;
}

.c0 > h5 {
  margin: 0;
  color: rgb(0,130,155);
  width: 100%;
  text-shadow: 1px 1px rgb(234,242,246);
}

.c1 {
  position: relative;
  cursor: default;
  font-size: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid;
  padding: 4px;
  padding-top: 6px;
  border-radius: 3px;
  font-weight: 700;
  color: rgba(30,30,28,0.4);
  border-color: rgba(30,30,28,0.4);
}

.c1 > input {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
}

<div
  class="c0"
  data-testid="skill-brawl"
>
  <h5>
    Brawl (BR)
  </h5>
  <label
    class="c1"
    data-testid="skill-career-brawl"
    name="skill.brawl.career"
  >
    <input
      disabled=""
      name="skill.brawl.career"
      type="checkbox"
    />
    <span>
      CAREER
    </span>
  </label>
  <div
    class="c2"
    data-testid="skill-rank-brawl"
  >
    <div>
      <div
        class="c3"
        data-testid="brawl-1"
      />
      <div
        class="c4"
        data-testid="brawl-2"
      />
      <div
        class="c4"
        data-testid="brawl-3"
      />
      <div
        class="c4"
        data-testid="brawl-4"
      />
      <div
        class="c4"
        data-testid="brawl-5"
      />
    </div>
  </div>
</div>
`;
